<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/activity_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_editText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/activity_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descSenha"
        android:hint="@string/descSenha"
        android:inputType="textPassword"
        android:ems="10"
        android:textSize="25sp"
        android:backgroundTint="@color/colorLaranja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_textView2" />

    <TextView
        android:id="@+id/activity_login_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/senha"
        android:textSize="25sp"
        android:textColor="@color/colorAzul"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_editText2"
        app:layout_constraintVertical_bias="0.566" />

    <EditText
        android:id="@+id/activity_login_editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:contentDescription="@string/descLogin"
        android:hint="@string/descLogin"
        android:textSize="25sp"
        android:backgroundTint="@color/colorLaranja"
        app:layout_constraintBottom_toTopOf="@+id/activity_login_textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_login_textView" />

    <Button
        android:id="@+id/activity_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAzul"
        android:text="@string/cancelar"
        android:textColor="@color/colorBranco"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activity_login_button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_login_button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorAzul"
        android:text="@string/entrar"
        android:textColor="@color/colorBranco"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_login_button" />

</androidx.constraintlayout.widget.ConstraintLayout>