<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/layout_dialog_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descAtividade"
        android:ems="10"
        android:hint="@string/descAtividade"
        android:inputType="text"
        android:textSize="20sp"
        android:backgroundTint="@color/colorLaranja"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/atividdade"
    android:textColor="@color/colorAzul"
    android:textSize="25sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dia"
        android:textColor="@color/colorAzul"
        android:textSize="25sp"
        app:layout_constraintEnd_toStartOf="@+id/spndia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_dialog_editText" />

    <Spinner
        android:id="@+id/spndia"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:entries="@array/dia"
        android:scrollbarSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/layout_dialog_editText" />


</androidx.constraintlayout.widget.ConstraintLayout>